TG-47: Changed the delete button color to white. The change will be visible when a style in tasks is fixed

--- a/src/Components/SuperAdmins/ListItem/listItem.module.css
+++ b/src/Components/SuperAdmins/ListItem/listItem.module.css
@@ -26,7 +26,7 @@
     padding : 2px 4px 0px 4px;
     background: #f36d6d;
     border-radius: 5px;
-    color: #000000;
+    color: #ffffff;
     text-align: center;
     font-size: 16px;
     font-family: 'Roboto', sans-serif;
